[build-system]
requires = ["setuptools>=63.0", "wheel", "paho-mqtt==1.6.1", "attrs>=21.2.0"]
build-backend = "setuptools.build_meta"

[urls]
"Homepage" = "https://github.com/epdevlab/elkoep-mqtt"
"Bug Tracker" = "https://github.com/epdevlab/elkoep-mqtt/issues"

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Set the maximum line length to 127 characters.
line-length = 120

# Define the number of spaces used for indentation, aligning with Black's style.
indent-width = 4

# The minimum Python version to target, e.g., when considering automatic code upgrades, 
# like rewriting type annotations
target-version = "py312"

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "E712"]

[tool.ruff.lint]
# Enable Pyflakes (F) and a subset of the pycodestyle (E)  codes by default.
# pycodestyle warnings (W)
# Activate Security Rules (S) to replace bandit
# Enable the isort rules (I) to replace isort
# flake8-bugbear (B)
select = ["F", "E4", "E7", "E9", "W", "S", "I", "B"] 
ignore = ["F841"] # List any rules to be ignored, currently empty.

# Allow auto-fixing of all enabled rules when using the `--fix` option.
fixable = ["ALL"]
unfixable = [] # Specify rules that cannot be auto-fixed, if any.

# Define a regex pattern for allowed unused variables (typically underscore-prefixed).
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Enforce double quotes for strings, following Black's style.
quote-style = "double"

# Use spaces for indentation, in line with Black's formatting style.
indent-style = "space"

# Keep magic trailing commas, a feature of Black's formatting.
skip-magic-trailing-comma = false

# Automatically detect and use the appropriate line ending style.
line-ending = "auto"

[lint.mccabe]
max-complexity = 10

# https://github.com/home-assistant/core/blob/dev/mypy.ini
[tool.mypy]
exclude = ["venv", ".venv", "tests"]
python_version = "3.12"
platform = "linux"
install_types = true
non_interactive = true
show_error_codes = true
follow_imports = "normal"
enable_incomplete_feature = "NewGenericSyntax"
local_partial_types = true
strict_equality = true
no_implicit_optional = true
warn_incomplete_stub = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true
enable_error_code = "ignore-without-code, redundant-self, truthy-iterable"
disable_error_code = "annotation-unchecked, import-not-found, import-untyped, no-redef"
extra_checks = false
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_untyped_defs = true
warn_return_any = true
warn_unreachable = true